<resources>
    <string name="app_name">bookstore</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="signin_title">Sign In</string>
    <string name="signup_title">Sign Up</string>
    <string name="didntacc">Did not have any account?<b> Sign up here</b></string>
    <string name="alreadyacc">If you have an account? <b> Sign in here</b></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_your_account">Sign in with your Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signin">Sign In</string>
    <string name="sign_up_with_your_email">Sign up with your email</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="signup">Sign Up</string>
    <string name="username">Username</string>
    <string name="fullname">Fullname</string>
    <string name="search_removed">Đã xóa tìm kiếm</string>
    <string name="undo">Hoàn tác</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_payment_next_btn">Next</string>
    <string name="upload_payment_image_hint">your payment screen capture.</string>
    <string name="upload_payment_please_provide_us">Please provide us</string>
    <string name="upload_payment_upload">Upload</string>
    <string name="upload_payment_title">Upload Payment</string>
    <string name="upload_payment_back_button_desc">Back button</string>
    <string name="upload_payment_upload_image_view">Upload Image View</string>
    <string name="success_payment_back_to_home_page">Back to Home Page</string>
    <string name="success_payment_back_button">Back Button</string>
    <string name="success_payment_done">Done</string>
    <string name="success_payment_green_check_icon">Green check icon</string>
    <string name="success_payment_order_id">Your Order ID: AJSB123</string>
    <string name="success_payment_note">Your order payment is verified and in preparation step.</string>
    <string name="success_payment_title">Thank you for choosing us!</string>
    <string name="payment_qrcode_title">Checkout</string>
    <string name="payment_qrcode_back_btn">Cancel</string>
    <string name="payment_qrcode_button_back_desc">Button back</string>
    <string name="payment_qrcode_next_btn">Next</string>
    <string name="payment_qrcode_image_title">QR Code Image</string>
    <string name="payment_info_confirm_review">Review</string>
    <string name="payment_info_confirm_back_btn">Back</string>
    <string name="payment_info_confirm_confirm_btn">Confirm</string>
    <string name="payment_info_confirm_button_back_desc">Button Back</string>
    <string name="payment_info_confirm_textview">TextView</string>
    <string name="payment_info_confirm_confirm_payment">Confirm Payment</string>
    <string name="payment_info_confirm_from">From</string>
    <string name="payment_info_confirm_bank_account">Bank Account</string>
    <string name="payment_info_confirm_to">To</string>
    <string name="payment_info_confirm_message">Message</string>
    <string name="payment_info_confirm_bank_account_title">Bank Account</string>
    <string name="payment_info_confirm_total_amount">Total Amount</string>
    <string name="payment_info_confirm_date">Date</string>
    <string name="order_preview_phone_number">Phone number</string>
    <string name="order_preview_country">Country</string>
    <string name="order_preview_texttotalitems">TextTotalItems</string>
    <string name="order_preview_texttotalprices">TextTotalPrices</string>
    <string name="order_preview_postal_code">Postal code</string>
    <string name="order_preview_70000">70000</string>
    <string name="order_preview_0999817364">0999817364</string>
    <string name="order_preview_name">Name</string>
    <string name="order_preview_minh_huan">minh huan</string>
    <string name="order_preview_address">Address</string>
    <string name="order_preview_24_nguyen_van_tang">24 nguyen van tang</string>
    <string name="order_preview_city">City</string>
    <string name="order_preview_ho_chi_minh">ho chi minh</string>
    <string name="order_preview_checkout">Checkout</string>
    <string name="order_preview_shipping_information_title">Shipping Information</string>
    <string name="order_preview_back_button">Back button</string>
    <string name="order_preview_your_order_items">Your order items</string>
    <string name="order_preview_proceed_to_checkout">Proceed to Checkout</string>
    <string name="order_preview_viet_nam">Viet Nam</string>
    <string name="cart_layout_cart_title">Cart</string>
    <string name="cart_layout_proceed_to_checkout"><![CDATA[Proceed To Checkout >]]></string>
    <string name="cart_layout_back_button_desc">Back button</string>
    <string name="cart_layout_total_item">Total item: 0 items</string>
    <string name="cart_layout_120_000_vnd">0 VND</string>
    <string name="cart_item_title">Vi Than Cua Nhung Quyet Dinh</string>
    <string name="cart_item_price">12,000 VND</string>
    <string name="cart_item_decrease_quantity">Decrease quantity</string>
    <string name="cart_item_item_image">Item image</string>
    <string name="cart_item_increase_quantity">Increase quantity</string>
    <string name="cart_item_5">5</string>
    <string name="search">Search</string>
    <string name="latest_search">Latest Search</string>
    <string name="books">Books</string>
    <string name="back">Back</string>
    <string name="cart">Cart</string>
    <string name="search_book">Search book...</string>
    <string name="todo">TODO</string>
    <string name="this_is_random_text_taking_form_lorem">This is random text taking form lorem</string>
    <string name="get_started">GET STARTED</string>
    <string name="no">TODO</string>
    <string name="varity_of_books">Varity of books</string>
    <string name="book_detail">Book Detail</string>
    <string name="_1_month_ago">1 Month ago</string>
    <string name="see_all_reviews">See All Reviews</string>
    <string name="another_product">Another Product</string>
    <string name="review_96">Review (96)</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="madelina">Madelina</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="_189_000_vnd">189.000 VND</string>
    <string name="atomic_habits_james_clear">Atomic Habits - James Clear</string>
    <string name="bi_u_t_ng_l_ch_s_t_m_ki_m">Biểu tượng lịch sử tìm kiếm</string>
    <string name="x_a_t_m_ki_m">Xóa tìm kiếm</string>
</resources>