<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signin_layout">

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="40sp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/signinwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_your_account"
        android:textSize="15sp"
        android:layout_below="@id/signin"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/signinwith"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48sp"
        android:selectAllOnFocus="true"
        android:drawableStart="@drawable/email_svgrepo_com"
        android:drawablePadding="10dp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48sp"
        android:selectAllOnFocus="true"
        android:drawableStart="@drawable/lock_svgrepo_com"
        android:drawablePadding="10dp" />
    <TextView
        android:id="@+id/forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/forgot_password"
        android:textStyle="bold|italic"
        android:textSize="15sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/signinbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signin"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/didntaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didntacc"
        android:layout_below="@id/signinbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>