<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/order_preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="60dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/order_preview_back_button"
            android:src="@drawable/baseline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,ImageContrastCheck,RedundantDescriptionCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:text="@string/order_preview_checkout"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/shap_border_radius_top_15">


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btnProceed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/order_preview_proceed_to_checkout"
                android:textSize="18sp"
                app:cornerRadius="10dp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <!-- res/layout/activity_main.xml -->
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/order_preview_your_order_items"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_item_recyclerView"
            android:layout_width="422dp"
            android:layout_height="233dp"
            android:layout_marginTop="24dp"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textTotalItems" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="16dp"
            android:text="@string/order_preview_shipping_information_title"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_item_recyclerView" />

        <LinearLayout
            android:id="@+id/input_gr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView14"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/text_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="Name"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_name"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@string/order_preview_minh_huan"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/text_addr"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="Address"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_address"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:text="@string/order_preview_24_nguyen_van_tang"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_gr2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/input_gr1"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/text_city"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="City"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_city"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@string/order_preview_ho_chi_minh"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/text_postalcode"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="Postal code"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_postal_code"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@string/order_preview_70000"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/input_gr3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/input_gr2"
            tools:layout_editor_absoluteX="0dp">

            <EditText
                android:id="@+id/text_country"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="Country"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_country"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@string/order_preview_viet_nam"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/text_phonenum"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:autofillHints="phone number"
                android:background="@drawable/shape_order_preview_bg"
                android:hint="@string/order_preview_phone_number"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:text="@string/order_preview_0999817364"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <TextView
            android:id="@+id/textTotalItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="12dp"
            android:text="@string/order_preview_texttotalitems"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textTotalAmountItems"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="28dp"
            android:text="@string/order_preview_texttotalprices"
            android:textColor="@color/greenmix"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Footer Navigation Bar -->
<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomNavigationView"-->
<!--        android:layout_width="411dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:background="@color/colorPrimaryDark"-->
<!--        app:itemIconTint="@color/white"-->
<!--        app:itemTextColor="@color/white"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:menu="@menu/bottom_nav_menu" />-->

</LinearLayout>