<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/signup_layout">
    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="40sp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/signupwith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_with_your_email"
        android:textSize="15sp"
        android:layout_below="@id/signup"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/signupwith"
        android:layout_marginStart="20dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48sp"
        android:selectAllOnFocus="true"
        android:drawableStart="@drawable/email_svgrepo_com"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/email"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:minHeight="48sp"
        android:selectAllOnFocus="true"
        android:drawableStart="@drawable/email_svgrepo_com"
        android:drawablePadding="10dp" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="360dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48sp"
        android:selectAllOnFocus="true"
        android:drawableStart="@drawable/lock_svgrepo_com"
        android:drawablePadding="10dp" />
    <Button
        android:id="@+id/signupbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signup"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <TextView
        android:id="@+id/alreadyaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alreadyacc"
        android:layout_below="@id/signupbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>